@@ -2,6 +2,8 @@
 
 	* mml2015.el (autoload): Autoload correct files.  Trivial patch
 	from dme@dme.org.
+	(mml2015-pgg-decrypt, mml2015-pgg-verify): Make sure either nil or
+	handle is returned.
 
 2002-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
